--- a/.eslintrc
+++ b/.eslintrc
@@ -61,14 +61,12 @@
         "ignoreRestSiblings": false
       }
     ],
-    "prettier/prettier": [
-      2,
-      {
-        "printWidth": 100,
-        "singleQuote": true,
-        "trailingComma": "none",
-        "tabWidth": 2
-      }
-    ]
+    "prettier/prettier": 0
+    // [
+    //   "error",
+    //   {
+    //     "endOfLine": "auto"
+    //   }
+    // ]
   }
 }
