--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "@minimal/material-kit-react",
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!@mui/lab/internal/pickers/date-utils)"
+    ]
+  },
   "author": "minimals.cc",
   "licence": "MIT",
   "version": "1.2.0",
@@ -41,13 +46,16 @@
     "@iconify/icons-ant-design": "^1.1.0",
     "@iconify/icons-eva": "^1.1.0",
     "@iconify/icons-ic": "^1.1.10",
+    "@mui/icons-material": "^5.6.2",
     "@mui/lab": "^5.0.0-alpha.47",
     "@mui/material": "^5.4.4",
     "@mui/utils": "^5.0.0",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "apexcharts": "^3.28.3",
+    "axios": "^0.26.1",
     "change-case": "^4.1.2",
     "date-fns": "^2.24.0",
+    "enzyme": "^3.11.0",
     "faker": "^5.5.3",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
@@ -73,8 +81,13 @@
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/eslint-parser": "^7.15.7",
+    "@iconify/icons-carbon": "^1.2.4",
+    "@iconify/icons-eos-icons": "^1.2.2",
     "@iconify/icons-fluent": "^1.2.3",
-    "@iconify/react": "^3.1.4",
+    "@iconify/icons-pepicons": "^1.2.3",
+    "@iconify/react": "^3.2.1",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "12.1.4",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -85,6 +98,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "react-test-renderer": "17.0.2"
   }
 }
